[package]
name = "user-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
serde = "1.0.197"
dotenv = "0.15.0"
bcrypt = "0.15.1"

[dependencies.mongodb]
version = "2.8.1"
default-features = false
features = ["sync"]